more reviewers, funding, affiliation change

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -42,7 +42,7 @@
 \title{A quantitative framework for investigating the reliability of network construction}
 
 
-\author{Alyssa R. Cirtwill$^{1\dagger}$, \&  Anna Ekl\"{o}f$^{1\ddagger}$, Tomas Roslin$^{2,3\star}$, Kate Wootton$^{2\diamond}$, Dominique Gravel$^{4\triangleright}$}
+\author{Alyssa R. Cirtwill$^{1\dagger}$, \&  Anna Ekl\"{o}f$^{1\ddagger}$, Tomas Roslin$^{2\star}$, Kate Wootton$^{2\diamond}$, Dominique Gravel$^{3\triangleright}$}
 \date{\begin{minipage}[h]{0.45\textwidth}
 \small$^1$ Department of Physics,\\
 Chemistry and Biology (IFM)\\ 
@@ -51,15 +51,18 @@ Link\"{o}ping, Sweden\\
 $^2$ Department of Ecology\\ 
 P.O. Box 7044\\ 
 Swedish University of Agricultural Sciences \\ 
-SE-750 07 Uppsala, Sweden 
-\end{minipage}\hspace{.05\textwidth}\begin{minipage}[h]{0.45\textwidth}
-\small$^3$ Spatial Foodweb Ecology Group\\ 
-Department of Agricultural Sciences \\ 
-PO Box 27 (Latokartanonkaari 5)\\ 
-FI-00014 University of Helsinki, Finland\\
-$^4$ D\'{e}partement de biologie\\ 
+SE-750 07 Uppsala, Sweden\\
+$^3$ D\'{e}partement de biologie\\ 
 Universit\'{e} de Sherbrooke\\ 
 Sherbrooke, Canada
+\end{minipage}\hspace{.05\textwidth}\begin{minipage}[h]{0.45\textwidth}
+\small$^\dagger$ Corresponding author:\\
+alyssa.cirtwill@gmail.com\\
+tel: +46 723 158464\\
+$^\ddagger$ anna.eklof@liu.se\\
+$^\star$ tomas.roslin@slu.se\\
+$^\diamond$ kate.wootton@slu.se\\
+$^\triangleright$ dominique.gravel@usherbrooke.ca
 \end{minipage}
 }
 
@@ -71,19 +74,7 @@ Sherbrooke, Canada
 \raggedright
 \setlength{\parindent}{15pt} 
 
-\vspace{-.25in}
-\begin{minipage}[h]{0.25\textwidth}
-\small$^\dagger$ Corresponding author:\\
-alyssa.cirtwill@gmail.com\\
-tel: +46 723 158464
-\end{minipage}\hspace{.05\textwidth}\begin{minipage}[h]{0.22\textwidth}
-\small$^\ddagger$ anna.eklof@liu.se\\
-$^\star$ tomas.roslin@slu.se
-\end{minipage}\hspace{.05\textwidth}\begin{minipage}[h]{0.38\textwidth}
-\small$^\diamond$ kate.wootton@slu.se\\
-$^\triangleright$ dominique.gravel@usherbrooke.ca
-\end{minipage}
-
+\vspace{-.4in}
 
 {\small
 \section*{\small Statement of authorship}
@@ -390,7 +381,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
 \section*{Acknowledgements}
 
-  The authors thank Daniel Cartensen for fruitful discussion of the ideas in this manuscript. We also thank K\'{e}vin Cazalles for providing feedback on the manuscript.
+  The authors thank Daniel Cartensen for fruitful discussion of the ideas in this manuscript. We also thank K\'{e}vin Cazalles for providing feedback on the manuscript. The authors also appreciate support from the Swedish Research Council (VR) for grant \#2016-06872 (to TR). Additional funding was provided by a Formas grant (\#942-2015-1262) to AE.
 
 \end{spacing}
 \clearpage
