--- a/manuscript/supplemental.tex
+++ b/manuscript/supplemental.tex
@@ -28,14 +28,13 @@
 \title{A quantitative framework for investigating the reliability of network construction: supplemental information}
 
 
-\author{Alyssa R. Cirtwill$^{1\dagger}$, \&  Anna Ekl\"{o}f$^{1}$, Tomas Roslin$^{2,3}$, Kate Wootton$^{2}$, Dominique Gravel$^{4}$}
+\author{Alyssa R. Cirtwill$^{1\dagger}$, \&  Anna Ekl\"{o}f$^{1}$, Tomas Roslin$^{2}$, Kate Wootton$^{2}$, Dominique Gravel$^{3}$}
 \date{\small$^1$Department of Physics, Chemistry\\ 
 and Biology (IFM)\\ 
 Link\"{o}ping University\\
 Link\"{o}ping, Sweden\\
 \medskip $^2$ Department of Ecology\\ P.O. Box 7044, Swedish University of Agricultural Sciences \\ SE-750 07 Uppsala, Sweden \\
-\medskip $^3$ Spatial Foodweb Ecology Group\\ Department of Agricultural Sciences \\ PO Box 27 (Latokartanonkaari 5)\\ FI-00014 University of Helsinki, Finland \\
-\medskip$^4$ D\'{e}partement de biologie\\ 
+\medskip$^3$ D\'{e}partement de biologie\\ 
 Universit\'{e} de Sherbrooke\\ 
 Sherbrooke, Canada\\ 
 \medskip
@@ -411,8 +410,8 @@ alyssa.cirtwill@gmail.com\\
 
   \clearpage
 
-    \bibliographystyle{ecollett} 
-    \bibliography{MyCollection}
+    \bibliographystyle{ecol_let} 
+    \bibliography{manual_abbrev}
 
 \end{document}
 
