--- a/manuscript/coverletter.tex
+++ b/manuscript/coverletter.tex
@@ -56,7 +56,7 @@
     As a potential solution, we propose a Bayesian framework which partitions the uncertainty associated with missing interactions into explicit components and allows us to place confidence intervals around each estimated interaction probability. The Bayesian framework also facilitates the use of prior information (e.g., species traits) to reduce uncertainty around some interactions. We illustrate this framework using an extraordinarily  well-replicated set of plant-galler-parasitoid networks recently published as a data paper (Kopelke \emph{et al.}, 2017. \textbf{Ecology} 98: 1730). Using this dataset, we demonstrate how uncertainty surrounding each interaction probability affects network-level metrics. Our derivation of the Bayesian framework and quantitative examples are constructed so as to be accessible to readers with little or no prior experience with Bayesian statistics. We hope that this gentle introduction will help the broadest possible set of readers apply the framework we propose.
 
 
-    The present work is outstandingly novel relative to the recent work by one of the authors (Tomas Roslin) cited in this manuscript. Kopelke \emph{et al.} (2017) is the data paper describing the \emph{Salix}-galler-parasitoid system used for the quantitative analyses in the present work. Kopelke \emph{et al.} (2017) does not contain any analyses and so does not affect the novelty of the present work in any way.
+    The present work uses empirical material published as a data paper by one of the authors (Tomas Roslin). The cited paper, Kopelke \emph{et al.} (2017), presents the extremely high-quality dataset used in the present work but does not contain any analyses. As such, the present work is an entirely novel use of these data, which are also available to the full ecological community.
 
 
     We appreciate the chance to submit one of the first Novel Methods papers at \textbf{Ecology Letters}. We are confident that the fundamental conceptual shift implied by our approach, accompanied by clear examples and easy-to-use scripts, can achieve the high standard you are looking for. We hope that you agree and eagerly await your reply.
@@ -73,5 +73,17 @@
 
 % Pedro Jordano pedroj@me.com Estacion Biologica de Donana CSIC
 % Phillip Staniczenko pstaniczenko@sesync.org National Socio-Environmental Synthesis Center (SESYNC) 
+% Louis-Félix Bersier louis-felix.bersier@unifr.ch Université de Fribourg
+
+
+% Extra suggestion
+% Jacopo Grilli jgrilli@santafe.edu Santa Fe Institute
+% Eve McDonald-Madden e.mcdonaldmadden@uq.edu.au University of Queensland
+
+% Ben Weinstein Oregon State University weinsteb@oregonstate.edu
+% Jean-Philippe Lessard Concordia University jp.lessard@concordia.ca
+% Catherine Graham catherine.graham@wsl.ch Swiss Federal Research Institute WSL 
+% Anne Chao chao@stat.nthu.edu.tw National Tsing Hua University
+% Robert Colwell robertkcolwell@gmail.com Museum of Natural History, University of Colorado Boulder
 
 
